--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js main.js",
-    "format": "prettier --write index.html index.css index.js main.js"
+    "format": "prettier --write index.html index.css index.js main.js",
+    "build": "node index.js"
   },
   "devDependencies": {
     "csso": "^5.0.4",
